--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -1,28 +1,57 @@
 <!DOCTYPE html>
 <html lang="en">
+<html xmlns="http://www.w3.org/1999/xhtml" xmlns:th="http://www.thymeleaf.org">
 <head>
-  <meta charset="utf-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-  <meta name="description" content="">
-  <meta name="author" content="">
-  <title>Please sign in</title>
-  <link href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-/Y6pD6FV/Vv2HJnA6t+vslU6fwYXjCFtcEpHbNJ0lyAFsXTsjBbfaDjzALeQsN6M" crossorigin="anonymous">
-  <link href="https://getbootstrap.com/docs/4.0/examples/signin/signin.css" rel="stylesheet" crossorigin="anonymous"/>
+    <meta charset="UTF-8">
+    <title>Title</title>
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+
+    <!-- Bootstrap CSS -->
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
 </head>
 <body>
+<script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
+<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
+<style>
+    .form form {
+        width: 350px;
+        margin: 0 auto;
+        padding-top: 50px;
+    }
+    .btn-primary {
+        height: 44px;
+    }
+    .btn-box-place{
+        padding-top: 7px;
+    }
+    .table-header {
+        padding-left: 5px;
+        font-weight: bold;
+        font-size: x-large;
+
+    }
+
+</style>
 <div class="container">
-  <form class="form-signin" method="post" action="/login">
-    <h2 class="form-signin-heading">Please sign in</h2>
-    <p>
-      <label for="username" class="sr-only">Username</label>
-      <input type="text" id="username" name="username" class="form-control" placeholder="Email address" required autofocus>
-    </p>
-    <p>
-      <label for="password" class="sr-only">Password</label>
-      <input type="password" id="password" name="password" class="form-control" placeholder="Password" required>
-    </p>
-    <input name="_csrf" type="hidden" value="95fa1753-2329-4b03-9c42-41d3cd8c15f5" />
-    <button class="btn btn-lg btn-primary btn-block" type="submit">Sign in</button>
-  </form>
+    <div class="form">
+        <form class="form-horizontal" role="form" method="POST" th:action =" @{/}">
+            <div class="form-group">
+                <div class="form-group">
+                    <div class="col-sm-10">
+                        <label  class="form-label table-header">Please sign in</label>
+                        <input type="text" class="form-control" placeholder="Email address" name="username" required>
+                        <input type="password" class="form-control" placeholder="Password" name="password" required>
+                        <div class="btn-box-place">
+                        <button type="submit" class="btn btn-primary form-control w-100">Sign in</button>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </form>
+    </div><!-- form  -->
 </div>
-</body></html>
+
+</body>
+</html>
