--- a/src/main/resources/templates/user.html
+++ b/src/main/resources/templates/user.html
@@ -1,91 +1,69 @@
-<!doctype html>
+<!DOCTYPE html>
 <html xmlns="http://www.w3.org/1999/xhtml" xmlns:th="http://www.thymeleaf.org">
 <html lang="en">
 <head>
-    <!-- Required meta tags -->
+    <meta charset="UTF-8">
+    <title>Title</title>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
     <!-- Bootstrap CSS -->
-    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
-          integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
-
-    <link rel="icon" type="image/x-icon"
-          href="leaf.png"
-          sizes="any"/>
-
-    <title>User page</title>
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.4.1/dist/css/bootstrap.min.css"
+          integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh"
+          crossorigin="anonymous">
 </head>
 <body>
+<!-- HEADER -->
+<div class=" col-sm-12 navbar navbar-dark bg-dark">
 
-<nav class="navbar navbar-expand-xl navbar-light" style="background-color: #477979;">
-    <div class="container-fluid">
-        <a class="navbar-brand" href="#">
-            <td th:utext="${user.getEmail()}">...</td>
-            with role:
-            <tr th:each="role: ${roles}">
-                <td th:utext="${role.getName().replace('ROLE_', '') + ' '}">...</td>
-        </a>
-        <a th:href="@{/logout}" class="float-right btn text-secondary">Logout</a>
+    <div class="float-left" id = "header-data">
+<!--        <a class="font-weight-bold text-white " th:text="${userCurrent.getUsername()}">zzz@mail.ru</a>-->
+<!--        <a class=" text-white"> with roles: </a>-->
+<!--        <a class="text-white" th:text="${userCurrent.getRolesToString()}">ADMIN USER</a>-->
     </div>
-    </div>
-</nav>
+    <a th:href="@{/logout}" class="btn float-right text-secondary ">Logout</a>
 
-
-<div class="row">
+</div>
+<!--BODY OF PAGE-->
+<div class="row" style="padding-top: 5px">
+    <!--    LEFT MENU-->
     <div class="col-2">
-        <div class="nav flex-column nav-pills" id="v-pills-tab" role="tablist" aria-orientation="vertical">
-            <a class="nav-link active" id="v-pills-profile-tab" data-toggle="pill" href="#v-pills-profile" role="tab"
-               aria-controls="v-pills-profile" aria-selected="false">User</a>
+        <div class="nav nav-pills">
+            <a class="nav-link w-100 active" data-toggle="tab" href="#user">User</a>
         </div>
     </div>
-    <div class="col-10">
-        <div class="tab-content" id="v-pills-tabContent">
-            <div class="tab-pane fade show active" id="v-pills-home" role="tabpanel" aria-labelledby="v-pills-home-tab">
-                <h1>User information-page</h1>
-                <div class="container-fluid px-lg-5">
-                    <div class="row">
-                        <div class="col-10 px-lg-5 border bg-light align-items-center">
-                            <nav aria-label="breadcrumb">
-                                <ol class="breadcrumb">
-                                    <h5>About user</h5>
-                                </ol>
-                            </nav>
+    <!--  CONTENT OF LEFT MENU-->
+    <div class="col-10" style="background: #F7F7F7; height:720px;">
+        <div class="tab-pane" id="user">
+            <h2 style="padding-top: 10px; padding-bottom: 10px;">User information-page</h2>
+            <div class="card">
+                <h5 class="card-header">About user</h5>
+                <div class="card-body">
+                    <tr>
+                        <td>
+                            <!--TABLE OF USERS-->
                             <table class="table table-striped">
                                 <thead>
                                 <tr>
                                     <th scope="col">ID</th>
-                                    <th scope="col">First Name</th>
-                                    <th scope="col">Last Name</th>
-                                    <th scope="col">Email</th>
+                                    <th scope="col">Name</th>
+                                    <th scope="col">Username</th>
+                                    <th scope="col">Value</th>
                                     <th scope="col">Role</th>
                                 </tr>
                                 </thead>
-                                <tbody>
-                                <tr>
-                                    <td th:utext="${user.getId()}">...</td>
-                                    <td th:utext="${user.getFirstName()}">...</td>
-                                    <td th:utext="${user.getLastName()}">...</td>
-                                    <td th:utext="${user.getEmail()}">...</td>
-                                    <td th:utext="${user.getRolesToString()}">...</td>
-                                </tr>
+                                <tbody id ="currentUserTableBody">
+
                                 </tbody>
                             </table>
-                        </div>
-                    </div>
+                        </td>
+                    </tr>
                 </div>
             </div>
         </div>
     </div>
-
-    <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"
-            integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo"
-            crossorigin="anonymous"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js"
-            integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1"
-            crossorigin="anonymous"></script>
-    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"
-            integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM"
-            crossorigin="anonymous"></script>
+</div>
+<script type="module" src="../static/user.js"></script>
+<script type="module" src="../static/functions.js"></script>
 </body>
 </html>
