--- a/src/main/resources/templates/edit.html
+++ b/src/main/resources/templates/edit.html
@@ -11,7 +11,7 @@
     <input type="text" th:field="*{firstName}" id="firstName"/>
     <div style="color:red" th:if="${#fields.hasErrors('firstName')}" th:errors="*{firstName}">Name error</div>
     <br/>
-    <label for="password">Enter first name</label>
+    <label for="password">password</label>
     <input type="text" th:field="*{password}"id="password"/>
     <div style="color:red" th:if="${#fields.hasErrors('password')}" th:errors="*{password}">Name error</div>
     <br/>
